--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -234,7 +234,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://c.xcvpn.me/?path=" data-type="Xingchen" data-code="register&code" target="_blank"><b>星辰机场</b></a>
                                 </div>
                                 <div class="panel-body">
                                     <p>【包年送2个月】</p><p>1、购买入门版年付套餐额外送2个月，共14个月，只要99元！！！</p><p>2、购买“至尊天皇”年付套餐，额外送2个月，只要299元！！！</p><p>3、购买其他包月类套餐中的年付，同样送2个月！！！</p><p>错过要再等一年！！</p>
@@ -304,7 +304,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://c.xcvpn.me/?path=" data-type="Xingchen" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -539,16 +539,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
-                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-122715.htm" title="告别卡顿！全面解析Clash高延迟的根源与终极优化方案">告别卡顿！全面解析Clash高延迟的根源与终极优化方案</a></li>
-                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
-                        <li class="py-2"><a href="/news/article-116153.htm" title="深度解读Clash官网及全方位使用指南：开启智能代理新时代">深度解读Clash官网及全方位使用指南：开启智能代理新时代</a></li>
-                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
-                        <li class="py-2"><a href="/news/article-119579.htm" title="Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南">Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南</a></li>
-                        <li class="py-2"><a href="/news/article-114926.htm" title="潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记">潘多拉固件中集成V2Ray全攻略：从配置到优化的科学上网实践笔记</a></li>
-                        <li class="py-2"><a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-112476.htm" title="深入解析Vmess技术原理及其应用">深入解析Vmess技术原理及其应用</a></li>
+                        <li class="py-2"><a href="/news/article-116465.htm" title="UC浏览器科学上网全攻略：移动端畅游互联网的高效利器">UC浏览器科学上网全攻略：移动端畅游互联网的高效利器</a></li>
+                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
+                        <li class="py-2"><a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游">V2Ray网速测试异常全解析：从零速困境到极速畅游</a></li>
+                        <li class="py-2"><a href="/news/article-110830.htm" title="完整指南：最新版Clash的安装、配置与使用技巧">完整指南：最新版Clash的安装、配置与使用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-117424.htm" title="利用Clash实现旁路由测速的全面指南：提升网络性能的实用技巧">利用Clash实现旁路由测速的全面指南：提升网络性能的实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
+                        <li class="py-2"><a href="/news/article-117726.htm" title="iPhone科学上网利器：Shadowrocket全方位使用指南（安装、配置与实战技巧）">iPhone科学上网利器：Shadowrocket全方位使用指南（安装、配置与实战技巧）</a></li>
+                        <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
                     </ul>
     </div>
 </div>
@@ -560,7 +560,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
