--- a/privacy.htm
+++ b/privacy.htm
@@ -162,16 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-119579.htm" title="Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南">Ubuntu 上玩转 Clash 旁路由：从入门到精通的全流程指南</a></li>
-                        <li class="py-2"><a href="/news/article-110830.htm" title="完整指南：最新版Clash的安装、配置与使用技巧">完整指南：最新版Clash的安装、配置与使用技巧</a></li>
-                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
-                        <li class="py-2"><a href="/news/article-122386.htm" title="天行科学上网加速器终极指南：从入门到精通的全方位解析">天行科学上网加速器终极指南：从入门到精通的全方位解析</a></li>
-                        <li class="py-2"><a href="/news/article-116791.htm" title="2021免费Vmess节点全景详解与实用配置指南">2021免费Vmess节点全景详解与实用配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-113121.htm" title="全面解析Shadowrocket游戏：使用教程与配置指南">全面解析Shadowrocket游戏：使用教程与配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-111633.htm" title="闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰">闪电狼CLASH全面指南：精通战术与策略，制胜游戏巅峰</a></li>
                         <li class="py-2"><a href="/news/article-118969.htm" title="深度揭秘红杏科学上网SSR：从基础原理到高级配置全攻略">深度揭秘红杏科学上网SSR：从基础原理到高级配置全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
-                        <li class="py-2"><a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游">V2Ray网速测试异常全解析：从零速困境到极速畅游</a></li>
-                        <li class="py-2"><a href="/news/article-118663.htm" title="如何启动V2Ray：从安装到配置的完整实操指南">如何启动V2Ray：从安装到配置的完整实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-124636.htm" title="手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通">手把手教你用Padavan路由器搭建V2Ray科学上网环境：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-114030.htm" title="SSR与V2Ray终极对决：翻墙利器谁主沉浮？">SSR与V2Ray终极对决：翻墙利器谁主沉浮？</a></li>
+                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
+                        <li class="py-2"><a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点">突破网络边界：全方位指南教你如何添加科学上网节点</a></li>
+                        <li class="py-2"><a href="/news/article-125953.htm" title="突破网络边界：Pure科学上网工具全方位解析与实用指南">突破网络边界：Pure科学上网工具全方位解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
+                        <li class="py-2"><a href="/news/article-116791.htm" title="2021免费Vmess节点全景详解与实用配置指南">2021免费Vmess节点全景详解与实用配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-116465.htm" title="UC浏览器科学上网全攻略：移动端畅游互联网的高效利器">UC浏览器科学上网全攻略：移动端畅游互联网的高效利器</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
