--- a/date/2025-06/page-2.htm
+++ b/date/2025-06/page-2.htm
@@ -112,6 +112,36 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-06-10">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="突破网络边界：全方位指南教你如何添加科学上网节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-123350.htm" title="突破网络边界：全方位指南教你如何添加科学上网节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">突破网络边界：全方位指南教你如何添加科学上网节点</h3>
+                            </a>
+                            <p class="about_text">在这个信息爆炸的时代，互联网已成为人们获取知识、交流思想的重要渠道。然而，由于各种原因，许多有价值的网络资源被限制访问。科学上网技术应运而生，成为现代网民突破地理限制、获取全球信息的必备技能。本文将深</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-06-09">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="科学上网新利器：V2rayNG订阅配置全攻略与深度解析">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-123027.htm" title="科学上网新利器：V2rayNG订阅配置全攻略与深度解析" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">科学上网新利器：V2rayNG订阅配置全攻略与深度解析</h3>
+                            </a>
+                            <p class="about_text">在当今数字时代，网络自由与隐私保护已成为全球网民的核心诉求。面对复杂的网络环境，一款名为V2rayNG的工具正悄然改变着数千万用户的互联网体验。本文将带您深入探索这款工具的订阅配置奥秘，从基础概念到高</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-06-08">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -241,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
-                        <li class="py-2"><a href="/news/article-114626.htm" title="深度解析车clash：提升汽车安全的关键">深度解析车clash：提升汽车安全的关键</a></li>
-                        <li class="py-2"><a href="/news/article-112819.htm" title="荣耀路由器Vmess详尽配置及使用指南">荣耀路由器Vmess详尽配置及使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-126271.htm" title="解锁全球网络自由：AC1200GU路由器科学上网完全攻略">解锁全球网络自由：AC1200GU路由器科学上网完全攻略</a></li>
                         <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
-                        <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
-                        <li class="py-2"><a href="/news/article-115851.htm" title="Clash没网了怎么办？一次性解决代理打开却断网的深层问题">Clash没网了怎么办？一次性解决代理打开却断网的深层问题</a></li>
-                        <li class="py-2"><a href="/news/article-118663.htm" title="如何启动V2Ray：从安装到配置的完整实操指南">如何启动V2Ray：从安装到配置的完整实操指南</a></li>
-                        <li class="py-2"><a href="/news/article-112475.htm" title="如何使用Clash进行在线订阅转换的详细指南">如何使用Clash进行在线订阅转换的详细指南</a></li>
+                        <li class="py-2"><a href="/news/article-117096.htm" title="Clash电脑下载与安装全攻略：从零开始的科学上网实用指南">Clash电脑下载与安装全攻略：从零开始的科学上网实用指南</a></li>
                         <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
+                        <li class="py-2"><a href="/news/article-118043.htm" title="海角科学上网全攻略：技术原理、实操步骤与优化技巧详解">海角科学上网全攻略：技术原理、实操步骤与优化技巧详解</a></li>
+                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-118969.htm" title="深度揭秘红杏科学上网SSR：从基础原理到高级配置全攻略">深度揭秘红杏科学上网SSR：从基础原理到高级配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-118663.htm" title="如何启动V2Ray：从安装到配置的完整实操指南">如何启动V2Ray：从安装到配置的完整实操指南</a></li>
+                        <li class="py-2"><a href="/news/article-114030.htm" title="SSR与V2Ray终极对决：翻墙利器谁主沉浮？">SSR与V2Ray终极对决：翻墙利器谁主沉浮？</a></li>
+                        <li class="py-2"><a href="/news/article-113121.htm" title="全面解析Shadowrocket游戏：使用教程与配置指南">全面解析Shadowrocket游戏：使用教程与配置指南</a></li>
                     </ul>
     </div>
 </div>
@@ -262,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
