--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -539,16 +539,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-116465.htm" title="UC浏览器科学上网全攻略：移动端畅游互联网的高效利器">UC浏览器科学上网全攻略：移动端畅游互联网的高效利器</a></li>
-                        <li class="py-2"><a href="/news/article-123988.htm" title="Clash汉化版13.3完全攻略：从零开始掌握科学上网利器">Clash汉化版13.3完全攻略：从零开始掌握科学上网利器</a></li>
-                        <li class="py-2"><a href="/news/article-120498.htm" title="V2Ray网速测试异常全解析：从零速困境到极速畅游">V2Ray网速测试异常全解析：从零速困境到极速畅游</a></li>
-                        <li class="py-2"><a href="/news/article-110830.htm" title="完整指南：最新版Clash的安装、配置与使用技巧">完整指南：最新版Clash的安装、配置与使用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-112475.htm" title="如何使用Clash进行在线订阅转换的详细指南">如何使用Clash进行在线订阅转换的详细指南</a></li>
                         <li class="py-2"><a href="/news/article-125614.htm" title="突破网络限制：Clash代理工具全面解析与实战指南">突破网络限制：Clash代理工具全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-117424.htm" title="利用Clash实现旁路由测速的全面指南：提升网络性能的实用技巧">利用Clash实现旁路由测速的全面指南：提升网络性能的实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-115245.htm" title="我的世界Clash全攻略：在沙盒与策略的交汇处统治战场">我的世界Clash全攻略：在沙盒与策略的交汇处统治战场</a></li>
+                        <li class="py-2"><a href="/news/article-116153.htm" title="深度解读Clash官网及全方位使用指南：开启智能代理新时代">深度解读Clash官网及全方位使用指南：开启智能代理新时代</a></li>
+                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-125286.htm" title="深度指南：Shadowrocket免ID使用全攻略与安全上网实践">深度指南：Shadowrocket免ID使用全攻略与安全上网实践</a></li>
+                        <li class="py-2"><a href="/news/article-124311.htm" title="深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南">深度剖析V2RayNG与Trojan：从原理到实践的翻墙技术全指南</a></li>
                         <li class="py-2"><a href="/news/article-115542.htm" title="锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道">锐速与V2Ray安装顺序终极解析：性能与隐私的平衡之道</a></li>
-                        <li class="py-2"><a href="/news/article-117726.htm" title="iPhone科学上网利器：Shadowrocket全方位使用指南（安装、配置与实战技巧）">iPhone科学上网利器：Shadowrocket全方位使用指南（安装、配置与实战技巧）</a></li>
+                        <li class="py-2"><a href="/news/article-118350.htm" title="小宝科学上网全攻略：从下载安装到高效使用的实用指南">小宝科学上网全攻略：从下载安装到高效使用的实用指南</a></li>
                         <li class="py-2"><a href="/news/article-123665.htm" title="沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略">沉浸式虚拟体验：手把手教你下载与安装VR Clash游戏全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-114302.htm" title="完整指南：如何在智能电视上使用 v2ray 打破网络限制">完整指南：如何在智能电视上使用 v2ray 打破网络限制</a></li>
                     </ul>
     </div>
 </div>
@@ -560,7 +560,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
